added bowtie2 option

--- a/NGSEP_varcall_full/dev_test/Script_development.ipynb
+++ b/NGSEP_varcall_full/dev_test/Script_development.ipynb
@@ -128,6 +128,134 @@
     "    with open('NGSEP_align_%s.slurm'%sample, 'w') as f:\n",
     "                f.write(slurm)"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "slurm bowtie 2"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Overwriting ../bowtie2_aln_slurm.py\n"
+     ]
+    }
+   ],
+   "source": [
+    "%%writefile ../bowtie2_aln_slurm.py\n",
+    "import os\n",
+    "import argparse\n",
+    "import glob\n",
+    "from os.path import basename\n",
+    "\n",
+    "parser=argparse.ArgumentParser(prog='bowtie2_aln_slurm', description='Script for creating slurm jobs for aligning reads with bowtie2')\n",
+    "parser.add_argument('-i', '--input', dest='fastqreads', help='The folder with your fastq reads')\n",
+    "arg=parser.parse_args()\n",
+    "\n",
+    "## Check if there is some parameter missing\n",
+    "if 'None' in str(arg):\n",
+    "        parser.error('Input parameter missing!! Please check your command line parameters with -h or --help')\n",
+    "\n",
+    "## sample params\n",
+    "fastq=arg.fastqreads.split('/')[0] # just for avoid to duplication of the '/' at the end\n",
+    "reads=glob.glob('%s/*' % fastq)\n",
+    "\n",
+    "slurm_header = '''#!/bin/sh\n",
+    "#SBATCH --ntasks-per-node=4\n",
+    "#SBATCH --nodes=1\n",
+    "#SBATCH --mem=56gb\n",
+    "#SBATCH --time=20:00:00\n",
+    "#SBATCH --job-name=BTmap_%s\n",
+    "#SBATCH --mail-user=sybarreral@huskers.unl.edu\n",
+    "#SBATCH --mail-type=ALL\n",
+    "#SBATCH --error=/work/agro932/sybarreral/agrobinf/sybarreral/log/map_bt2_%s.err\n",
+    "#SBATCH --output=/work/agro932/sybarreral/agrobinf/sybarreral/log/map_bt2_%s.out\n",
+    "\n",
+    "module load bowtie/2.3\n",
+    "\n",
+    "IDXPTH=/work/agro932/sybarreral/agrobinf/sybarreral/project/ucdReads/H2214/NGSEP_varcall_full/REF\n",
+    "READPTH=/work/agro932/sybarreral/agrobinf/sybarreral/project/ucdReads/H2214/NGSEP_varcall_full/FASTQ\n",
+    "\n",
+    "'''\n",
+    "\n",
+    "for i in reads:\n",
+    "    sample = basename(i).split('.')[0]\n",
+    "    slurm = slurm_header%(sample, sample, sample)\n",
+    "    aln_cmd='''bowtie2 --local -p 4 -N 1 -x $IDXPTH/Pacutifolius -U $READPTH/%s -S aln_res/%s_pha.sam\\n''' % (basename(i), sample)\n",
+    "    slurm += aln_cmd\n",
+    "    with open('bowtie2_align_%s.slurm'%sample, 'w') as f:\n",
+    "                f.write(slurm)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 7,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Writing ../samtools_sort_slurm.py\n"
+     ]
+    }
+   ],
+   "source": [
+    "%%writefile ../samtools_sort_slurm.py\n",
+    "import os\n",
+    "import argparse\n",
+    "import glob\n",
+    "from os.path import basename\n",
+    "\n",
+    "parser=argparse.ArgumentParser(prog='samtools_sort_slurm', description='Script for creating slurm jobs for samtools sort')\n",
+    "parser.add_argument('-i', '--input', dest='fastqreads', help='The folder with your fastq reads')\n",
+    "arg=parser.parse_args()\n",
+    "\n",
+    "## Check if there is some parameter missing\n",
+    "if 'None' in str(arg):\n",
+    "        parser.error('Input parameter missing!! Please check your command line parameters with -h or --help')\n",
+    "\n",
+    "## sample params\n",
+    "fastq=arg.fastqreads.split('/')[0] # just for avoid to duplication of the '/' at the end\n",
+    "reads=glob.glob('%s/*' % fastq)\n",
+    "\n",
+    "slurm_header = '''#!/bin/bash\n",
+    "#SBATCH --ntasks=1\n",
+    "#SBATCH --mem=64gb\n",
+    "#SBATCH --time=10:00:00\n",
+    "#SBATCH --job-name=sortReads_%s\n",
+    "#SBATCH --mail-user=sybarreral@huskers.unl.edu\n",
+    "#SBATCH --mail-type=ALL\n",
+    "#SBATCH --error=/work/agrobinf/SHARED/agrobinf2020/users/sybarreral/log/sort_%s.err\n",
+    "#SBATCH --output=/work/agrobinf/SHARED/agrobinf2020/users/sybarreral/log/sort_%s.out\n",
+    "\n",
+    "module load samtools/1.9\n",
+    "\n",
+    "'''\n",
+    "\n",
+    "for i in reads:\n",
+    "    sample = basename(i).split('.')[0]\n",
+    "    slurm = slurm_header%(sample, sample, sample)\n",
+    "    aln_cmd='''samtools sort -o aln_res/%s_pha.bam aln_res/%s_pha.sam\\n''' % (sample, sample)\n",
+    "    slurm += aln_cmd\n",
+    "    with open('samtools_sort_%s.slurm'%sample, 'w') as f:\n",
+    "                f.write(slurm)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
